Make some styles on home & cart page

--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -1,29 +1,25 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
 
+{% block body_block %}
 
-{%block body_block%}
-
-<div class="mx-auto grid w-full max-w-7xl items-center space-y-4 px-2 py-10 md:grid-cols-2 md:gap-6 md:space-y-0 lg:grid-cols-4">
-    {%for p in data%}
-    <div class="relative aspect-[16/9]  w-auto rounded-md md:aspect-auto md:h-[400px]">
-      <img
-        src="{{p.image.url}}"
-        alt="AirMax Pro"
-        class="z-0 h-full w-full rounded-md object-cover"
-      />
-      <div class="absolute inset-0 rounded-md bg-gradient-to-t from-gray-900 to-transparent"></div>
-      <div class="absolute bottom-4 left-4 text-left">
-        <h1 class="text-lg font-semibold text-white">{{p.title}}</h1>
-        <p class="mt-2 text-sm text-gray-300">
-          {{p.description}}
-        </p>
-        <a href="{%url 'product-detail' p.id%}" class="mt-2 inline-flex cursor-pointer items-center text-sm font-semibold text-white">
-          Shop Now →
-        </a>
-      </div>
+<div
+  class="mx-auto grid w-full max-w-7xl items-center space-y-4 px-2 py-10 md:grid-cols-2 md:gap-6 md:space-y-0 lg:grid-cols-4">
+  {% for p in data %}
+  <div class="relative aspect-[16/9] w-auto rounded-md md:aspect-auto md:h-[400px]">
+    <img src="{{ p.image.url }}" alt="AirMax Pro" class="z-0 h-full w-full rounded-md object-cover" />
+    <div class="absolute inset-0 rounded-md bg-gradient-to-t from-gray-900 to-transparent"></div>
+    <div class="absolute bottom-4 left-4 text-left">
+      <h1 class="text-lg font-semibold text-white">{{ p.title }}</h1>
+      <p class="mt-2 text-sm text-gray-300">
+        {{ p.description }}
+      </p>
+      <a href="{% url 'product-detail' p.id %}"
+        class="mt-2 inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-semibold rounded-md text-white bg-gradient-to-br from-green-400 to-green-600 hover:from-green-500 hover:to-green-700 hover:shadow-md transition duration-300">
+        Shop Now →
+      </a>
     </div>
-    {%endfor%}
+  </div>
+  {% endfor %}
 </div>
-  
 
-{%endblock%}
+{% endblock %}
