--- a/store/templates/product_detail.html
+++ b/store/templates/product_detail.html
@@ -2,83 +2,64 @@
 
 {% block body_block %}
 
-
 <section class="overflow-hidden">
-    <div class="mx-auto max-w-5xl px-5 py-24">
+  <div class="mx-auto max-w-5xl px-5 py-24">
 
-      <form method="post" action="{%url 'add-to-cart' data.id %}">
-        {%csrf_token%}
+    <form method="post" action="{% url 'add-to-cart' data.id %}">
+      {% csrf_token %}
 
-        <div class="mx-auto flex flex-wrap items-center lg:w-4/5">
-          <img
-            alt="Nike Air Max 21A"
-            class="h-64 w-full rounded object-cover lg:h-96 lg:w-1/2"
-            src="{{data.image.url}}"
-          />
-          <div class="mt-6 w-full lg:mt-0 lg:w-1/2 lg:pl-10">
-              <h2 class="text-sm font-semibold tracking-widest text-gray-500">
-                  {{data.brand_object}}
-              </h2>
-            <h1 class="my-4 text-3xl font-semibold text-black">{{data.title}}</h1>
-            
-            <p class="leading-relaxed">
-             {{data.description}}
-            </p>
-            <div class="mb-5 mt-6 flex items-center border-b-2 border-gray-100 pb-5">
-              <div class="flex items-center">
-                <span class="mr-3 text-sm font-semibold">Brand :</span>
-                <span class="mr-3 text-sm font-semibold">{{data.brand_object}}</span>
-              </div>
-              <div class="ml-auto flex items-center">
-                <span class="mr-3 text-sm font-semibold">Size</span>
-                <div class="relative">
-  
-                  <select name="size" class="appearance-none rounded border border-gray-300 py-2 pl-3 pr-10 text-sm focus:border-black focus:outline-none focus:ring-2 focus:ring-black">
-                    
-                    {%for opt in data.size_object.all %}
-                        <option value="{{opt.name}}">{{opt.name}}</option>
-                    {%endfor%}
-  
-                  </select>
-                  <span class="pointer-events-none absolute right-0 top-0 flex h-full w-10 items-center justify-center text-center text-gray-600">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="lucide lucide-chevron-down"
-                    >
-                      <polyline points="6 9 12 15 18 9"></polyline>
-                    </svg>
-                  </span>
-                </div>
-              </div>
+      <div class="mx-auto flex flex-wrap items-center lg:w-4/5">
+        <img alt="Nike Air Max 21A" class="h-64 w-full rounded object-cover lg:h-96 lg:w-1/2"
+          src="{{ data.image.url }}" />
+        <div class="mt-6 w-full lg:mt-0 lg:w-1/2 lg:pl-10">
+          <h2 class="text-sm font-semibold tracking-widest text-gray-500">
+            {{ data.brand_object }}
+          </h2>
+          <h1 class="my-4 text-3xl font-semibold text-black">{{ data.title }}</h1>
+
+          <p class="leading-relaxed">
+            {{ data.description }}
+          </p>
+          <div class="mb-5 mt-6 flex items-center border-b-2 border-gray-100 pb-5">
+            <div class="flex items-center">
+              <span class="mr-3 text-sm font-semibold">Brand:</span>
+              <span class="mr-3 text-sm font-semibold">{{ data.brand_object }}</span>
             </div>
-            <div class="flex items-center justify-between">
-              <span class="title-font text-xl font-bold text-gray-900">
-                  ₹ {{data.price}}
-              </span>
-              <button
-                type="submit"
-                class="rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
-              >
-                Add to Cart
-              </button>
+            <div class="ml-auto flex items-center">
+              <span class="mr-3 text-sm font-semibold">Size:</span>
+              <div class="relative">
+                <select name="size"
+                  class="appearance-none rounded border border-gray-300 py-2 pl-3 pr-10 text-sm focus:border-black focus:outline-none focus:ring-2 focus:ring-black">
+                  {% for opt in data.size_object.all %}
+                  <option value="{{ opt.name }}">{{ opt.name }}</option>
+                  {% endfor %}
+                </select>
+                <span
+                  class="pointer-events-none absolute right-0 top-0 flex h-full w-10 items-center justify-center text-center text-gray-600">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="feather feather-chevron-down">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                  </svg>
+                </span>
+              </div>
             </div>
           </div>
+          <div class="flex items-center justify-between">
+            <span class="title-font text-xl font-bold text-gray-900">
+              ₹ {{ data.price }}
+            </span>
+            <button type="submit"
+              class="rounded-md bg-blue-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black">
+              Add to Cart
+            </button>
+          </div>
         </div>
+      </div>
 
-      </form>
-      
-    </div>
-  </section>
-  
+    </form>
 
-
+  </div>
+</section>
 
 {% endblock %}
