--- a/store/templates/payment.html
+++ b/store/templates/payment.html
@@ -17,7 +17,7 @@
         "key": "{{data.key_id}}", // Enter the Key ID generated from the Dashboard
         "amount": "{{data.amount}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
         "currency": "INR",
-        "name": "TrendzBazzar", //your business name
+        "name": "Trend Bazar", //your business name
         "description": "Test Transaction",
         "image": "https://example.com/your_logo",
         "order_id": "{{data.order_id}}", //This is a sample Order ID. Pass the id obtained in the response of Step 1
