--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -2,194 +2,154 @@
 
 {%block body_block%}
 <div class="mx-auto my-4 max-w-4xl md:my-6">
-    <div class="overflow-hidden  rounded-xl shadow">
-      <div class="grid grid-cols-1 md:grid-cols-2">
-        <div class="bg-gray-100 px-5 py-6 md:px-8">
-          <div class="flow-root">
-            <ul class="-my-7 divide-y divide-gray-200">
-             <!-- cart items -->
-             {%for bi in request.user.cart.get_cart_items%}
+  <div class="overflow-hidden  rounded-xl shadow">
+    <div class="grid grid-cols-1 md:grid-cols-2">
+      <div class="bg-gray-100 px-5 py-6 md:px-8">
+        <div class="flow-root">
+          <ul class="-my-7 divide-y divide-gray-200">
+            <!-- cart items -->
+            {%for bi in request.user.cart.get_cart_items%}
 
-             <li class="flex items-stretch justify-between space-x-5 py-7">
-                <div class="flex flex-1 items-stretch">
-                  <div class="flex-shrink-0">
-                    <img
-                      class="h-20 w-20 rounded-lg border border-gray-200 bg-white object-contain"
-                      src="{{bi.product_object.image.url}}"
-                      alt="{{bi.product_object.title}}"
-                    />
-                  </div>
-                  <div class="ml-5 flex flex-col justify-between">
-                    <div class="flex-1">
-                      <p class="text-sm font-bold">{{bi.product_object.title}}</p>
-                      <p class="mt-1.5 text-sm font-medium text-gray-500">
-                        Size : {{bi.size_object}}
-                      </p>
-                    </div>
-                    <p class="mt-4 text-xs font-medium ">x {{bi.quantity}}</p>
-                  </div>
+            <li class="flex items-stretch justify-between space-x-5 py-7">
+              <div class="flex flex-1 items-stretch">
+                <div class="flex-shrink-0">
+                  <img class="h-20 w-20 rounded-lg border border-gray-200 bg-white object-contain"
+                    src="{{bi.product_object.image.url}}" alt="{{bi.product_object.title}}" />
                 </div>
-                <div class="ml-auto flex flex-col items-end justify-between">
-                  <p class="text-right text-sm font-bold text-gray-900">
-                    ₹ {{bi.item_total}}
-                  </p>
-                  <button
-                    type="button"
-                    class="-m-2 inline-flex rounded p-2 text-gray-400 transition-all duration-200 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-900 focus:ring-offset-2"
-                  >
+                <div class="ml-5 flex flex-col justify-between">
+                  <div class="flex-1">
+                    <p class="text-sm font-bold">{{bi.product_object.title}}</p>
+                    <p class="mt-1.5 text-sm font-medium text-gray-500">
+                      Size : {{bi.size_object}}
+                    </p>
+                  </div>
+                  <p class="mt-4 text-xs font-medium ">x {{bi.quantity}}</p>
+                </div>
+              </div>
+              <div class="ml-auto flex flex-col items-end justify-between">
+                <p class="text-right text-sm font-bold text-gray-900">
+                  ₹ {{bi.item_total}}
+                </p>
+                <button type="button"
+                  class="-m-2 inline-flex rounded p-2 text-gray-400 transition-all duration-200 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-900 focus:ring-offset-2">
                   <span class="sr-only">Remove</span>
                   <a href="{%url 'basket-item-delete' bi.id%}">
-                      <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="h-5 w-5"
-                    >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="h-5 w-5">
                       <line x1="18" y1="6" x2="6" y2="18"></line>
                       <line x1="6" y1="6" x2="18" y2="18"></line>
                     </svg>
                   </a>
                 </button>
-                </div>
-              </li>
-
-              {%endfor%}
-             <!-- end cartitems -->
-             
-            </ul>
-          </div>
-          <hr class="mt-6 border-gray-200" />
-         
-
-         <form action="#" class="mt-6" >
-           
-            <div class="sm:flex sm:space-x-2.5 md:flex-col md:space-x-0 lg:flex-row lg:space-x-2.5">
-              <div class="flex-grow">
-                <input
-                  class="flex w-full rounded-md border border-gray-300 bg-white px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
-                  type="text"
-                  placeholder="Enter coupon code"
-                />
               </div>
-              <div class="mt-4 sm:mt-0 md:mt-4 lg:mt-0">
-                <button
-                  type="button"
-                  class="rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
-                >
-                  Apply Coupon
-                </button>
-              </div>
-            </div>
-          </form>
-     
-          <ul class="mt-6 space-y-3">
-            <li class="flex items-center justify-between text-gray-600">
-              <p class="text-sm font-medium">Sub total</p>
-              <p class="text-sm font-medium">₹ {{request.user.cart.basket_total}}</p>
             </li>
-            <li class="flex items-center justify-between text-gray-900">
-              <p class="text-sm font-medium ">Total</p>
-              <p class="text-sm font-bold ">₹ {{request.user.cart.basket_total}}</p>
-            </li>
+
+            {%endfor%}
+            <!-- end cartitems -->
+
           </ul>
         </div>
-        <div class="px-5 py-6 text-gray-900 md:px-8">
-          <div class="flow-root">
-            <div class="-my-6 divide-y divide-gray-200">
-              <div class="py-6">
-                <h2 class="text-base  font-bold">Contact Information</h2>
-                <form action="#" class="mt-6" method="post">
-                    {%csrf_token%}
-                  <div class="space-y-5">
-                    <div class="grid w-full max-w-sm items-center gap-1.5">
-                      <label
-                        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-                        for="name"
-                      >
-                        Email
-                      </label>
-                      <input
-                        class="flex w-full rounded-md border border-gray-300 bg-transparent px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
-                        type="email"
-                        id="name"
-                        placeholder="email"
-                        name="email"
-                        value="{{request.user.email}}"
-                      />
-                    </div>
-                    <div class="grid w-full max-w-sm items-center gap-1.5">
-                      <label
-                        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-                        for="email"
-                      >
-                        Phone
-                      </label>
-                      <input
-                        class="flex w-full rounded-md border border-gray-300 bg-transparent px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
-                        type="text"
-                        id="email"
-                        placeholder="phone"
-                        name="phone"
-                      />
-                    </div>
-                    <div class="grid w-full max-w-sm items-center gap-1.5">
-                        <label
-                          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-                          for="address"
-                        >
-                          Address
-                        </label>
-                        <input
-                          class="flex w-full rounded-md border border-gray-300 bg-transparent px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
-                          type="text"
-                          id="address"
-                          placeholder="address"
-                          name="delivery_address"
-                        />
-                      </div>
+        <hr class="mt-6 border-gray-200" />
 
-                      <div class="grid w-full max-w-sm items-center gap-1.5">
-                        <label
-                          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-                          for="email"
-                        >
-                          Payment Method
-                        </label>
-                        <select name="payment_mode" id=""
-                        class="flex w-full rounded-md border border-gray-300 bg-transparent px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
-                        >
-                            <option value="online">online</option>
-                            <option value="cod">cod</option>
 
-                        </select>
-                      </div>
+        <form action="#" class="mt-6">
 
-                    <div>
-                      <button
-                        type="submit"
-                        class="w-full rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
-                      >
-                        Place Order
-                      </button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-             
-             
-              
+          <div class="sm:flex sm:space-x-2.5 md:flex-col md:space-x-0 lg:flex-row lg:space-x-2.5">
+            <div class="flex-grow">
+              <input
+                class="flex w-full rounded-md border border-gray-300 bg-white px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
+                type="text" placeholder="Enter coupon code" />
             </div>
+            <div class="mt-4 sm:mt-0 md:mt-4 lg:mt-0">
+              <button type="button"
+                class="rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black">
+                Apply Coupon
+              </button>
+            </div>
+          </div>
+        </form>
+
+        <ul class="mt-6 space-y-3">
+          <li class="flex items-center justify-between text-gray-600">
+            <p class="text-sm font-medium">Sub total</p>
+            <p class="text-sm font-medium">₹ {{request.user.cart.basket_total}}</p>
+          </li>
+          <li class="flex items-center justify-between text-gray-900">
+            <p class="text-sm font-medium ">Total</p>
+            <p class="text-sm font-bold ">₹ {{request.user.cart.basket_total}}</p>
+          </li>
+        </ul>
+      </div>
+      <div class="px-5 py-6 text-gray-900 md:px-8">
+        <div class="flow-root">
+          <div class="-my-6 divide-y divide-gray-200">
+            <div class="py-6">
+              <h2 class="text-base  font-bold">Contact Information</h2>
+              <form action="#" class="mt-6" method="post">
+                {%csrf_token%}
+                <div class="space-y-5">
+                  <div class="grid w-full max-w-sm items-center gap-1.5">
+                    <label
+                      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+                      for="name">
+                      Email
+                    </label>
+                    <input
+                      class="flex w-full rounded-md border border-gray-300 bg-transparent px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
+                      type="email" id="name" placeholder="email" name="email" value="{{request.user.email}}" />
+                  </div>
+                  <div class="grid w-full max-w-sm items-center gap-1.5">
+                    <label
+                      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+                      for="email">
+                      Phone
+                    </label>
+                    <input
+                      class="flex w-full rounded-md border border-gray-300 bg-transparent px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
+                      type="text" id="email" placeholder="phone" name="phone" />
+                  </div>
+                  <div class="grid w-full max-w-sm items-center gap-1.5">
+                    <label
+                      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+                      for="address">
+                      Address
+                    </label>
+                    <input
+                      class="flex w-full rounded-md border border-gray-300 bg-transparent px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
+                      type="text" id="address" placeholder="address" name="delivery_address" />
+                  </div>
+
+                  <div class="grid w-full max-w-sm items-center gap-1.5">
+                    <label
+                      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+                      for="email">
+                      Payment Method
+                    </label>
+                    <select name="payment_mode" id=""
+                      class="flex w-full rounded-md border border-gray-300 bg-transparent px-3 py-2 text-sm placeholder:text-gray-400 focus:outline-none focus:ring-1 focus:ring-gray-400 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50">
+                      <option value="online">online</option>
+                      <option value="cod">cod</option>
+
+                    </select>
+                  </div>
+
+                  <div>
+                    <button type="submit"
+                      class="w-full rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black">
+                      Place Order
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
+
 
 {%endblock%}
