--- a/store/templates/register.html
+++ b/store/templates/register.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register</title>
 </head>
+
 <body>
-    
+
     <form action="" method="post">
 
         {% csrf_token %}
@@ -15,4 +17,5 @@
         <button type="submit">Register</button>
     </form>
 </body>
+
 </html>
